Elements covers bug fixed.

--- a/sources/easygenerator.Web/Content/editor.less
+++ b/sources/easygenerator.Web/Content/editor.less
@@ -340,7 +340,6 @@
             padding: 10px 11px 10px 0;
             border-radius: 3px;
             box-shadow: 0 1px 3px 0px #b3bcc2;
-            z-index: 1;
 
             .sections-list-item-sort-button {
                 position: relative;
